convert MDL to bootstrap

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -3,74 +3,55 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
     <title>McDermott Network</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
-    <!-- MDL links -->
-    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.lime-deep_orange.min.css">
-    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- Bootstrap links -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
   </head>
   <body>
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-          <!-- Title -->
-          <span class="mdl-layout-title">
-            <a href="{% url 'index' %}" class="no-dec inherit-color">
-              McDermott Network
-            </a>
-          </span>
-          <!-- Add spacer, to align navigation to the right -->
-          <div class="mdl-layout-spacer"></div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
-                        mdl-textfield--floating-label mdl-textfield--align-right">
-              <label class="mdl-button mdl-js-button mdl-button--icon"
-                     for="searchbox">
-                <i class="material-icons">search</i>
-              </label>
-              <div class="mdl-textfield__expandable-holder">
-                <form method="get" action="{% url 'search' %}">
-                <input class="mdl-textfield__input" type="text" name="q"
-                       id="searchbox" />
-                </form>
-              </div>
-            </div>
-          <!-- Navigation. We hide it in small screens. -->
-          <nav class="mdl-navigation mdl-layout--large-screen-only">
+    <!-- Header -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{% url 'index' %}">McDermott Network</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
             {% if not user.is_authenticated %}
-              <a class="mdl-navigation__link" href="{% url 'login' %}">Login</a>
+              <li><a href="{% url 'login' %}">Login</a></li>
             {% else %}
-              <a class="mdl-navigation__link" href="{% url 'scholars' %}">All Scholars</a>
-              <a class="mdl-navigation__link" href="{% url 'own_profile' %}">My Profile</a>
-              <a class="mdl-navigation__link" href="{% url 'logout' %}">Logout</a>
+              <li><a href="{% url 'scholars' %}">All Scholars</a></li>
+              <li><a href="{% url 'own_profile' %}">My Profile</a></li>
+              <li><a href="{% url 'logout' %}">Logout</a></li>
             {% endif %}
-          </nav>
+          </ul>
+          <form method="get" action="{% url 'search' %}" class="navbar-form navbar-right">
+            <input type="text" name="q" id="searchbox" class="form-control" placeholder="Search...">
+          </form>
         </div>
-      </header>
-      <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">McDermott Network</span>
-        <nav class="mdl-navigation">
-          {% if not user.is_authenticated %}
-            <a class="mdl-navigation__link" href="{% url 'login' %}">Login</a>
-          {% else %}
-            <a class="mdl-navigation__link" href="{% url 'scholars' %}">All Scholars</a>
-            <a class="mdl-navigation__link" href="{% url 'own_profile' %}">My Profile</a>
-            <a class="mdl-navigation__link" href="{% url 'logout' %}">Logout</a>
-          {% endif %}
-        </nav>
       </div>
-      <main class="mdl-layout__content">
-        <div class="page-content">
-          {% block content %}
-          {% endblock content %}
-        </div>
-      </main>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="container-fluid">
+      <div class="row">
+        {% block content %}
+        {% endblock content %}
+      </div>
     </div>
 
   </body>
