--- a/core/templates/core/edit_info.html
+++ b/core/templates/core/edit_info.html
@@ -4,7 +4,7 @@
 
 {% block inner_content %}
 
-<div class="text-center">
+<div class="">
   {% if form.errors %}
     There were errors!
       {% for field in form %}
@@ -13,7 +13,7 @@
         {% endfor %}
       {% endfor %}
   {% endif %}
-  <form enctype="multipart/form-data" method="post" action="{% url 'edit_info' %}">
+  <form enctype="multipart/form-data" method="post" action="{% url 'edit_info' %}" class="form-horizontal">
   {% csrf_token %}
     {% for hidden in form.hidden_fields %}
       {{ hidden }}
@@ -21,134 +21,142 @@
     {% endfor %}
 
     <!-- Manual HTML for McUser form -->
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ form.first_name|add_class:"mdl-textfield__input" }}
+    <div class="form-group col-md-6">
       <label for="id_{{ form.first_name.name }}" class="mdl-textfield__label">
         First name
       </label>
+      {{ form.first_name|add_class:"form-control" }}
       <span class="mdl-textfield__error">{{ form.first_name.errors }}</span>
     </div>
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ form.last_name|add_class:"mdl-textfield__input" }}
+    <div class="form-group col-md-6">
       <label for="id_{{ form.last_name.name }}" class="mdl-textfield__label">
         Last name
       </label>
+      {{ form.last_name|add_class:"form-control" }}
       <span class="mdl-textfield__error">{{ form.last_name.errors }}</span>
     </div>
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ form.birthday|add_class:"mdl-textfield__input" }}
+    <div class="form-group col-md-6">
       <label for="id_{{ form.birthday.name }}" class="mdl-textfield__label">
         Birthday
       </label>
+      {{ form.birthday|add_class:"form-control" }}
       <span class="mdl-textfield__error">{{ form.birthday.errors }}</span>
     </div>
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ form.class_year|add_class:"mdl-textfield__input" }}
+    <div class="form-group col-md-6">
       <label for="id_{{ form.class_year.name }}" class="mdl-textfield__label">
         Class year
       </label>
+      {{ form.class_year|add_class:"form-control" }}
       <span class="mdl-textfield__error">{{ form.class_year.errors }}</span>
     </div>
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ form.utd_id|add_class:"mdl-textfield__input" }}
+    <div class="form-group col-md-6">
       <label for="id_{{ form.utd_id.name }}" class="mdl-textfield__label">
         UTD ID
       </label>
+      {{ form.utd_id|add_class:"form-control" }}
       <span class="mdl-textfield__error">{{ form.utd_id.errors }}</span>
     </div>
 
     <!--TODO: Replace with Select vesion when MDL has it -->
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ form.gender|add_class:"mdl-textfield__input" }}
+    <div class="form-group col-md-6">
       <label for="id_{{ form.gender.name }}" class="mdl-textfield__label">
         Gender
       </label>
+      {{ form.gender|add_class:"form-control" }}
       <span class="mdl-textfield__error">{{ form.gender.errors }}</span>
     </div>
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ form.hometown|add_class:"mdl-textfield__input" }}
+    <div class="form-group col-md-6">
       <label for="id_{{ form.hometown.name }}" class="mdl-textfield__label">
         Hometown
       </label>
+      {{ form.hometown|add_class:"form-control" }}
       <span class="mdl-textfield__error">{{ form.hometown.errors }}</span>
     </div>
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ form.high_school|add_class:"mdl-textfield__input" }}
+    <div class="form-group col-md-6">
       <label for="id_{{ form.high_school.name }}" class="mdl-textfield__label">
         High School
       </label>
+      {{ form.high_school|add_class:"form-control" }}
       <span class="mdl-textfield__error">{{ form.high_school.errors }}</span>
     </div>
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ form.phone_number|add_class:"mdl-textfield__input" }}
+    <div class="form-group col-md-6">
       <label for="id_{{ form.phone_number.name }}" class="mdl-textfield__label">
         Phone Number
       </label>
+      {{ form.phone_number|add_class:"form-control" }}
       <span class="mdl-textfield__error">{{ form.phone_number.errors }}</span>
     </div>
     <br>
     <!--TODO: Replace this with something else later -->
-    <div>
+    <div class="col-md-12 text-center">
       {{ form.pic }}
       <span class="mdl-textfield__error">{{ form.pic.errors }}</span>
     </div>
     <br>
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ degree_form.school|add_class:"mdl-textfield__input" }}
+    {% if degree_form.errors %}
+      There were errors!
+        {% for field in degree_form %}
+          {% for error in field.errors %}
+            <p> {{ error }} {{ field.label_tag }} </p>
+          {% endfor %}
+        {% endfor %}
+    {% endif %}
+    <div class="form-group col-md-6">
       <label for="id_school" class="mdl-textfield__label">
         School
       </label>
+      {{ degree_form.school|add_class:"form-control" }}
       <span class="mdl-textfield__error">{{ degree_form.school.errors }}</span>
     </div>
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ degree_form.degree_type|add_class:"mdl-textfield__input" }}
+    <div class="form-group col-md-6">
       <label for="id_degree_type" class="mdl-textfield__label">
         Degree
       </label>
+      {{ degree_form.degree_type|add_class:"form-control" }}
       <span class="mdl-textfield__error">{{ degree_form.degree_type.errors }}</span>
     </div>
     <!--TODO: Replace with Date picker -->
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ degree_form.start_time|add_class:"mdl-textfield__input" }}
+    <div class="form-group col-md-6">
       <label for="id_start_time" class="mdl-textfield__label">
         Start Date
       </label>
+      {{ degree_form.start_time|add_class:"form-control" }}
       <span class="mdl-textfield__error">{{ degree_form.start_time.errors }}</span>
     </div>
     <!--TODO: Replace with Date picker -->
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ degree_form.end_time|add_class:"mdl-textfield__input" }}
+    <div class="form-group col-md-6">
       <label for="id_end_time" class="mdl-textfield__label">
         End Date
       </label>
+      {{ degree_form.end_time|add_class:"form-control" }}
       <span class="mdl-textfield__error">{{ degree_form.end_time.errors }}</span>
     </div>
     {{ major_formset.management_form }}
     {% for form in major_formset %}
       {{ form.id }}
-      <!--TODO: Replace with Select vesion when MDL has it -->
-      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        {{ form.utd_major|add_class:"mdl-textfield__input" }}
+      <div class="form-group col-md-6">
         <label for="id_major_set-0-utd_major" class="mdl-textfield__label">
           Major
         </label>
+        {{ form.utd_major|add_class:"form-control" }}
         <span class="mdl-textfield__error">{{ form.utd_major.errors }}</span>
       </div>
     {% endfor %}
     {{ minor_formset.management_form }}
     {% for form in minor_formset %}
       {{ form.id }}
-      <!--TODO: Replace with Select vesion when MDL has it -->
-      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        {{ form.utd_minor|add_class:"mdl-textfield__input" }}
+      <div class="form-group col-md-6">
         <label for="id_minor_set-0-utd_major" class="mdl-textfield__label">
           Minor
         </label>
+        {{ form.utd_minor|add_class:"form-control" }}
         <span class="mdl-textfield__error">{{ form.utd_minor.errors }}</span>
       </div>
     {% endfor %}
     <br>
-    <input class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" type="submit" value="save" />
+    <div class="col-md-12 text-center">
+      <input class="btn btn-default" type="submit" value="SAVE" />
+    </div>
     <br>
   </form>
 </div>
