--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -13,10 +13,9 @@
   <br>
   <br>
   <form method="get" action="{% url 'search' %}">
-    <div class="mdl-textfield mdl-js-textfield">
-      <input class="mdl-textfield__input" type="text" name="q"
-             id="searchbox" />
-      <label class="mdl-textfield__label" for="searchbox">Search...</label>
+    <div class="col-md-4 col-md-offset-4">
+      <input class="form-control" type="text" name="q"
+             id="searchbox" placeholder="Search..."/>
     </div>
   </form>
 </div>
@@ -25,25 +24,28 @@
 
 <br>
 <br>
-<div class="mdl-card mdl-shadow--3dp text-center center">
-  <div class="mdl-card__supporting-text">
-    <br>
-    <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+<div class="row text-center">
+  <div class="col-md-4 col-md-offset-4">
+    <form class="form-horizontal" method="post" action="{% url 'django.contrib.auth.views.login' %}">
     {% csrf_token %}
-      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <input class="mdl-textfield__input" id="id_username" maxlength="254" name="username" type="text" />
-        <label for="id_username" class="mdl-textfield__label">
+      <div class="form-group">
+        <label for="id_username" class="col-sm-2 control-label">
           Username
         </label>
+        <div class="col-sm-10">
+          <input class="form-control" id="id_username" maxlength="254" name="username" type="text" />
+        </div>
       </div>
-      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <td><input class="mdl-textfield__input" id="id_password" name="password" type="password" /></td>
-        <label for="id_username" class="mdl-textfield__label">
+      <div class="form-group">
+        <label for="id_username" class="col-sm-2 control-label">
           Password
         </label>
+        <div class="col-sm-10">
+          <input class="form-control" id="id_password" name="password" type="password" />
+        </div>
       </div>
-    <input class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" type="submit" value="login" />
- 
+    <input class="btn btn-default" type="submit" value="Login" />
+
     </form>
     <br>
     <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
