--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -148,3 +148,72 @@ footer {
 .main .page-header {
   margin-top: 0;
 }
+
+/* Calendar code */
+.empty {
+  width: 100px;
+  height: 80px;
+  text-align: center;
+}
+
+.month {
+  height: 500px;
+  width: 70%;
+  background-color: red;
+}
+
+.day {
+  width: 100px;
+  height: 80px;
+  border: 1px solid black;
+}
+
+.day:hover {
+  border: 2px solid black;
+}
+
+.current {
+  width: 100px;
+  height: 80px;
+  border: 1px solid black;
+}
+
+.current:hover {
+  border: 2px solid black;
+}
+
+.day-div {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  text-align: left;
+  background-color: #f0f0f0;
+  position: relative;
+}
+
+.day-span {
+  position: absolute; 
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.day-link {
+  margin: 10px 0px 0px 10px;
+}
+a.day-link:link {
+    text-decoration: none;
+}
+
+a.day-link:visited {
+    text-decoration: none;
+}
+
+a.day-link:hover {
+    text-decoration: none;
+}
+
+a.day-link:active {
+    text-decoration: none;
