--- a/mccalendar/templates/mccalendar/index.html
+++ b/mccalendar/templates/mccalendar/index.html
@@ -1,14 +1,8 @@
-<html>
-  <head>
-    <title>McCalendar</title>
-  </head>
-  <body>
-    This is the index of the McCalendar app.
-    <a href='create_event'>Create event</a>
-    <ul>
-    {% for event in events %}
-      <li><a href='{{ event.id }}'>{{ event.subject }}</a></li>
-    {% endfor %}
-    </ul>
-  </body>
-</html>
+{% extends "base.html" %}
+This is the index of the McCalendar app.
+<a href='create_event'>Create event</a>
+<ul>
+{% for event in events %}
+  <li><a href='event/{{ event.id }}'>{{ event.subject }}</a></li>
+{% endfor %}
+</ul>
