--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -149,6 +149,14 @@ footer {
   margin-top: 0;
 }
 
+.error {
+  color: red;
+}
+
+.form-label {
+  font-weight: bold;
+}
+
 /* Calendar code */
 .empty {
   width: 100px;
@@ -192,7 +200,7 @@ footer {
 }
 
 .day-span {
-  position: absolute; 
+  position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
