--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -24,32 +24,30 @@
 
 <br>
 <br>
-<div class="row text-center">
-  <div class="col-md-4 col-md-offset-4">
-    <form class="form-horizontal" method="post" action="{% url 'django.contrib.auth.views.login' %}">
-    {% csrf_token %}
-      <div class="form-group">
-        <label for="id_username" class="col-sm-2 control-label">
-          Username
-        </label>
-        <div class="col-sm-10">
-          <input class="form-control" id="id_username" maxlength="254" name="username" type="text" />
-        </div>
+<div class="col-md-4 col-md-offset-4 text-center">
+  <form class="form-horizontal" method="post" action="{% url 'django.contrib.auth.views.login' %}">
+  {% csrf_token %}
+    <div class="form-group">
+      <label for="id_username" class="col-sm-2 control-label">
+        Username
+      </label>
+      <div class="col-sm-10">
+        <input class="form-control" id="id_username" maxlength="254" name="username" type="text" />
       </div>
-      <div class="form-group">
-        <label for="id_username" class="col-sm-2 control-label">
-          Password
-        </label>
-        <div class="col-sm-10">
-          <input class="form-control" id="id_password" name="password" type="password" />
-        </div>
+    </div>
+    <div class="form-group">
+      <label for="id_username" class="col-sm-2 control-label">
+        Password
+      </label>
+      <div class="col-sm-10">
+        <input class="form-control" id="id_password" name="password" type="password" />
       </div>
-    <input class="btn btn-default" type="submit" value="Login" />
+    </div>
+  <input class="btn btn-default" type="submit" value="Login" />
 
-    </form>
-    <br>
-    <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-  </div>
+  </form>
+  <br>
+  <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 </div>
 
 {% endif %}
