--- a/mccalendar/templates/mccalendar/day.html
+++ b/mccalendar/templates/mccalendar/day.html
@@ -5,6 +5,6 @@
 <a href="{% url 'mccalendar:create_event' %}">Create event</a>
 
 {% for event in events %}
-  <p>{{ event.subject }} - {{ event.description }}</p>
+  <p><a href={% url 'mccalendar:event_detail' event.id %}>{{ event.subject }}</a> - {{ event.description }}</p>
 {% endfor %}
 {% endblock %}
